[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/default2.png" type="Texture2D" id=1]
[ext_resource path="res://mocraAdventure/map/tilesets/1/textures/1.png" type="Texture2D" id=2]
[ext_resource path="res://mocraAdventure/map_editor/selector/tileTemplate.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1770.0
offset_bottom = -880.0
custom_minimum_size = Vector2( 150, 200 )
script = ExtResource( 3 )

[node name="backgroundTexture" type="TextureRect" parent="."]
offset_right = 150.0
offset_bottom = 200.0
texture = ExtResource( 1 )
expand = true

[node name="tileTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 110.0
texture = ExtResource( 2 )

[node name="tileNameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.5
offset_top = -49.0
offset_right = 43.5
offset_bottom = -35.0
text = "NIk TA MEERE"

[connection signal="gui_input" from="." to="." method="_on_Control_gui_input"]
